# QuotesCopy

./: .env.example  pyproject.toml
quotes_project/: manage.py
quotes_project/quotes_app/: apps.py  forms.py  models.py  tasks.py  urls.py  views.py
quotes_project/quotes_app/migrations/: 0001_initial.py  0002_alter_authors_born_date.py
quotes_project/quotes_app/templates/quotes_app/: add_author.html  add_quote.html  add_tag.html  author.html  base.html  bind_tags.html  quotes_list.html
quotes_project/quotes_project/: celery.py  settings.py  urls.py
quotes_project/sync_bd/: scrapy.cfg
quotes_project/sync_bd/sync_bd/: items.py  middlewares.py  pipelines.py  settings.py
quotes_project/sync_bd/sync_bd/spiders/: authors.py  quotes.py
quotes_project/users/: forms.py  urls.py  views.py
quotes_project/users/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  signup.html
